--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /Class/BasicInputOutputDemo/build/
+/Class/simple_if_statement/nbproject/private/
+/Class/simple_if_statement/build/
+/Class/simple_if_else/nbproject/private/
+/Class/simple_if_else/build/
