Signed-off-by: bj2594494 <byeongju8282@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Class/simple_if_statement/build/
 /Class/simple_if_else/nbproject/private/
 /Class/simple_if_else/build/
+/Class/if_else_if_else_example/nbproject/private/
+/Class/if_else_if_else_example/build/
