Signed-off-by: bj2594494 <byeongju8282@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Class/simple_if_else/build/
 /Class/if_else_if_else_example/nbproject/private/
 /Class/if_else_if_else_example/build/
+/Class/simple_if_else_example2/nbproject/private/
+/Class/simple_if_else_example2/build/
