Signed-off-by: bj2594494 <byeongju8282@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Class/if_else_if_else_example/build/
 /Class/simple_if_else_example2/nbproject/private/
 /Class/simple_if_else_example2/build/
+/Class/Temperature/nbproject/private/
+/Class/Temperature/build/
