--- a/Class/FactorialLookupTable/nbproject/private/private.properties
+++ b/Class/FactorialLookupTable/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\rcc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\byeon\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
