Signed-off-by: bj2594494 <byeongju8282@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Class/simple_if_else_example2/build/
 /Class/Temperature/nbproject/private/
 /Class/Temperature/build/
+/Class/Fractions/nbproject/private/
+/Class/Fractions/build/
