Signed-off-by: bj2594494 <byeongju8282@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Class/Temperature/build/
 /Class/Fractions/nbproject/private/
 /Class/Fractions/build/
+/Assignment/Jung_Byeongju_MonthDays/build/
