Signed-off-by: bj2594494 <byeongju8282@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Class/Fractions/nbproject/private/
 /Class/Fractions/build/
 /Assignment/Jung_Byeongju_MonthDays/build/
+/Assignment/Traffic/build/
